goprotobuf: Update docs for getters.
R=r
CC=golang-dev
http://codereview.appspot.com/6370043

--- a/README
+++ b/README
@@ -77,24 +77,35 @@ A summary of the properties of the protocol buffer interface
 for a protocol buffer variable v:
 
   - Names are turned from camel_case to CamelCase for export.
-  - There are no methods on v to set and get fields; just treat
+  - There are no methods on v to set fields; just treat
   	them as structure fields.
+  - There are getters that return a field's value if set,
+	and return the field's default value if unset.
+	The getters work even if the receiver is a nil message.
   - The zero value for a struct is its correct initialization state.
 	All desired fields must be set before marshaling.
   - A Reset() method will restore a protobuf struct to its zero state.
   - Non-repeated fields are pointers to the values; nil means unset.
 	That is, optional or required field int32 f becomes F *int32.
   - Repeated fields are slices.
-  - Helper functions are available to simplify the getting and setting of fields:
-  	foo.String = proto.String("hello") // set field
-  	s := proto.GetString(foo.String)  // get field
+  - Helper functions are available to aid the setting of fields.
+	Helpers for getting values are superseded by the
+	GetFoo methods and their use is deprecated.
+		msg.Foo = proto.String("hello") // set field
   - Constants are defined to hold the default values of all fields that
 	have them.  They have the form Default_StructName_FieldName.
-  - Enums are given type names and maps between names to values,
-  	plus a helper function to create values.  Enum values are prefixed
-  	with the enum's type name.
+	Because the getter methods handle defaulted values,
+	direct use of these constants should be rare.
+  - Enums are given type names and maps from names to values.
+	Enum values are prefixed with the enum's type name. Enum types have
+	a String method, and a Enum method to assist in message construction.
   - Nested groups and enums have type names prefixed with the name of
   	the surrounding message type.
+  - Extensions are given descriptor names that start with E_,
+	followed by an underscore-delimited list of the nested messages
+	that contain it (if any) followed by the CamelCased name of the
+	extension field itself.  HasExtension, ClearExtension, GetExtension
+	and SetExtension are functions for manipulating extensions.
   - Marshal and Unmarshal are functions to encode and decode the wire format.
 
 Consider file test.proto, containing
@@ -109,7 +120,7 @@ Consider file test.proto, containing
 	  repeated int64 reps = 3;
 	  optional group OptionalGroup = 4 {
 	    required string RequiredField = 5;
-	  };
+	  }
 	}
 
 To build a package from test.proto and some other Go files, write a
@@ -140,7 +151,7 @@ To create and play with a Test object from the example package,
 	func main() {
 		test := &example.Test {
 			Label: proto.String("hello"),
-			Type: proto.Int32(17),
+			Type:  proto.Int32(17),
 			Optionalgroup: &example.Test_OptionalGroup {
 				RequiredField: proto.String("good bye"),
 			},
@@ -155,8 +166,8 @@ To create and play with a Test object from the example package,
 			log.Fatal("unmarshaling error: ", err)
 		}
 		// Now test and newTest contain the same data.
-		if proto.GetString(test.Label) != proto.GetString(newTest.Label) {
-			log.Fatalf("data mismatch %q != %q", proto.GetString(test.Label), proto.GetString(newTest.Label))
+		if test.GetLabel() != newTest.GetLabel() {
+			log.Fatalf("data mismatch %q != %q", test.Get(Label), newTest.Get(Label))
 		}
 		// etc.
 	}
