goprotobuf: Use a standard redirecting AUTHORS and CONTRIBUTORS file.
Correct copyright notice to "The Go Authors" throughout.

R=rsc, bradfitz
CC=golang-dev
http://codereview.appspot.com/6845101

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Go support for Protocol Buffers - Google's data interchange format
-Copyright 2010 Google Inc.
+Copyright 2010 The Go Authors.
 http://code.google.com/p/goprotobuf/
 
 This software implements Go bindings for protocol buffers.  For
